# ATTA

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  s.ipynb
app/: api.py  main.py
app/utils/: correction.py  requests.py  tts.py
nb/: Gemma3_(4B).ipynb
src/app/: api.py  main.py
src/app/core/: config.py  model_loader.py
src/services/: llm.py  stt.py  tts.py
zonos/: ubuntu_requirements.txt  zonos.ipynb
