[project]
name = "atta"
version = "0.1.0"
description = "Voice chatbot with speech-to-text, LLM, and text-to-speech"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pydub>=0.25.1",
    "requests>=2.31.0",
    "scipy>=1.15.0",
    "sounddevice>=0.5.1",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
    "transformers>=4.48.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu126"]
index-strategy = "unsafe-best-match"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/services"]
